--- a/Calculator2/Base.lproj/Main.storyboard
+++ b/Calculator2/Base.lproj/Main.storyboard
@@ -58,7 +58,7 @@
                                                 <rect key="frame" x="160.5" y="0.0" width="79.5" height="93.5"/>
                                                 <color key="backgroundColor" red="0.68657616891538464" green="0.68657616891538464" blue="0.68657616891538464" alpha="1" colorSpace="calibratedRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                                <state key="normal" title="M+">
+                                                <state key="normal" title="M">
                                                     <color key="titleColor" red="0.1177059766" green="0.1177059766" blue="0.1177059766" alpha="1" colorSpace="calibratedRGB"/>
                                                 </state>
                                             </button>
@@ -66,7 +66,7 @@
                                                 <rect key="frame" x="241" y="0.0" width="79" height="93.5"/>
                                                 <color key="backgroundColor" red="0.68657616889999995" green="0.68657616889999995" blue="0.68657616889999995" alpha="1" colorSpace="calibratedRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                                <state key="normal" title="M-">
+                                                <state key="normal" title="+/-">
                                                     <color key="titleColor" red="0.1177059766" green="0.1177059766" blue="0.1177059766" alpha="1" colorSpace="calibratedRGB"/>
                                                 </state>
                                             </button>
@@ -115,6 +115,9 @@
                                                 <state key="normal" title="/">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="operationButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zQI-DW-kcr"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -161,6 +164,9 @@
                                                 <state key="normal" title="*">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="operationButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="OvT-DT-pPl"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -207,6 +213,9 @@
                                                 <state key="normal" title="-">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="operationButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ToY-X5-DWV"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -232,7 +241,7 @@
                                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="point:" destination="BYZ-38-t0r" eventType="touchUpInside" id="E6Q-FU-lBJ"/>
+                                                    <action selector="point:" destination="BYZ-38-t0r" eventType="touchUpInside" id="l5H-CG-gHd"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="909-Ve-1qv">
@@ -242,6 +251,9 @@
                                                 <state key="normal" title="=">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="resultButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7U3-Yc-e7n"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hxV-k1-DOM">
                                                 <rect key="frame" x="241" y="0.0" width="79" height="94"/>
@@ -251,7 +263,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="plusButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tyx-PK-bdu"/>
+                                                    <action selector="operationButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ewW-Mq-1W5"/>
                                                 </connections>
                                             </button>
                                         </subviews>
